src/test/resources/30/single/opf/invalid/uid-002.opf
<?xml version="1.0" encoding="UTF-8"?>
<?oxygen RNGSchema="../../../src/schema/package-30.rnc" type="compact"?>
<?oxygen SCHSchema="../../../src/schema/package-30.sch"?>
<package xmlns="http://www.idpf.org/2007/opf" version="3.0" 
    xmlns:dc="http://purl.org/dc/elements/1.1/" unique-identifier="uid">
    <!-- uid not resolving -->
    <metadata>
        <dc:title>Norwegian Wood</dc:title>
        <dc:identifier>urn:uuid:550e8400-e29b-41d4-a716-446655440000</dc:identifier>
        <dc:language>en</dc:language>        
        <meta property="dcterms:modified">2011-08-19T12:00:00Z</meta>               
    </metadata>  
    <manifest>
        <item id="text001" href="text001.xhtml" properties="nav" media-type="application/xhtml+xml" />
        <item id="text002" href="text002.xhtml" media-type="application/xhtml+xml" />
        <item id="img" href="img.png" media-type="image/png" />
    </manifest>
    <spine>
        <itemref idref="text001" />
        <itemref idref="text002" />
    </spine>
</package>